Fix for bug #28240: "isinf()" cannot be used in C++ for lack of prototype

Since isinf() portability across various platforms and compilers is a complicated question, we should not use it directly. Instead, the my_isinf() macro should be used, which is defined as an alias to the system-defined isinf() if it is safe to use, or a workaround implementation otherwise.


configure.in:
  Added a check to define HAVE_ISINF only if it can be used in C++ code as well.
include/my_global.h:
  Define my_isinf() as an alias to isinf(), if it is available in both C and C++ code. Otherwise, define it to a workaround implementation.
sql/item_func.cc:
  Replaced isinf() with my_isinf().
strings/strtod.c:
  Replaced isinf() with my_isinf().